cmake_minimum_required(VERSION 3.12)
project(LeetCode_Cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(LeetCode_Cpp Math/_2AddTwoNumbers.cpp Math/_7ReverseInteger.cpp Math/_8StringtoInteger.cpp Math/_9PalindromeNumber.cpp Math/_13RomantoInteger.cpp Math/_67AddBinary.cpp Math/_12IntegertoRoman.cpp Math/_43MultiplyStrings.cpp Math/_50Pow.cpp Math/_69Sqrt.cpp Math/_1025DivisorGame.cpp Math/_1009ComplementofBase10Integer.cpp Math/_976LargestPerimeterTriangle.cpp  Math/_942DIStringMatch.cpp Math/_908SmallestRangeI.cpp)
